feat(cmd): align show command with sway/i3 behaviour
Summary:

Improved scratchpad show command by aligning with sway, now it 'toggle'
visibility

Detailed Changes:
 - README.md:
   - Clarified command explanations and improved example configurations for scratchpad management.
 - cmd/move.go:
   - Updated copyright information.
 - cmd/root.go:
   - Enhanced error handling and internal logic for working with windows and workspaces.
 - cmd/show.go:
   - Overhauled logic for window focus and movement, added error handling for all operations.
 - internal/aerospace/workspace.go:
   - Introduced a new package for workspace management with methods to check window focus and workspace status.
 - internal/stderr/print.go:
   - Added a new package for standardized error message printing and process exit handling.
 - main.go:
   - Updated copyright information.
 - todo.txt:
   - Added new tasks for further improvements to the scratchpad feature.

--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,6 @@
 
 # Change show to toggle visibility of the scratchpad
 This way it should behave closer to how SwayWM scratchpad works.
+
+# Create a way to cycle through the scratchpads, to retrieve one manually
+in case yous send a window to the scratchpad by mistake.
